# Rust-backend-engineering

./: Cargo.toml  students.txt
data-types-02/: Cargo.toml
data-types-02/src/: main.rs
module01-variables-immutability-shadowing/: Cargo.toml
module01-variables-immutability-shadowing/src/: main.rs
module02-data-types/: Cargo.toml
module03-functions/: Cargo.toml
module03-functions/src/: main.rs
module04-control-flow/: Cargo.toml
module04-control-flow/src/: main.rs
module05-ownership-borrowing/: Cargo.toml
module05-ownership-borrowing/src/: main.rs
module06-references-slices/: Cargo.toml
module06-references-slices/src/: main.rs
module07-structs/: Cargo.toml
module07-structs/src/: main.rs
module08-enums/: Cargo.toml
module08-enums/src/: main.rs
module09-pattern-matching/: Cargo.toml
module09-pattern-matching/src/: main.rs
module10-option-result/: Cargo.toml
module10-option-result/src/: main.rs
module11-vectors/: Cargo.toml
module11-vectors/src/: main.rs
module12-hashmaps/: Cargo.toml
module12-hashmaps/src/: main.rs
module13-generics/: Cargo.toml
module13-generics/src/: main.rs
module14-traits/: Cargo.toml
module14-traits/src/: main.rs
module15-lifetimes/: Cargo.toml
module15-lifetimes/src/: main.rs
module16-error-handling/: Cargo.toml
module16-error-handling/src/: main.rs
module17-file-handling/: Cargo.toml
module17-file-handling/src/: main.rs
module18-modules-packages/: Cargo.toml
module18-modules-packages/src/: greetings.rs  (+2 more)
module19-crates/: Cargo.toml
variables-immutability-shadowing-01/: Cargo.toml
(+3 files in other folders)
