# Cargo.toml

[workspace]
resolver = "2"

members = [
    "module01-variables-immutability-shadowing",
    "module02-data-types", 
    "module03-functions", 
    "module04-control-flow", 
    "module05-ownership-borrowing",
     "module06-references-slices", 
     "module07-structs", 
     "module08-enums",
     "module09-pattern-matching", "module10-option-result", "module11-vectors", "module12-hashmaps", "module13-generics", "module14-traits", "module15-lifetimes", "module16-error-handling", "module17-file-handling", "module18-modules-packages", "module19-crates",
]
